log
Thu 21 Mar 2024 05:24:07 PM UTC: 
 exercises.c | 31 +++++++++++++++----------------
 1 file changed, 15 insertions(+), 16 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
ca77db6
Thu 21 Mar 2024 05:24:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7f0063d
Thu 21 Mar 2024 11:38:50 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
34d2e74
Fri 22 Mar 2024 12:20:14 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
test.c: In function ‘test_elimina_elemento’:
test.c:132:5: error: implicit declaration of function ‘eliminaElementos’; did you mean ‘test_elimina_elemento’? [-Werror=implicit-function-declaration]
  132 |     eliminaElementos(L, elem);
      |     ^~~~~~~~~~~~~~~~
      |     test_elimina_elemento
cc1: all warnings being treated as errors
Compilation failed
a20cf20
Fri 22 Mar 2024 12:20:40 PM UTC: 
 exercises.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
 tests:  2|3
total_score: 20/70
02ee356
 tests:  0|3
total_score: 20/70
83df71a
Fri 22 Mar 2024 07:39:28 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
   96 |   while(!is_empty(P1)){
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
985142e
Fri 22 Mar 2024 07:40:28 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
exercises.c:99:22: error: expected ‘)’ before ‘{’ token
   99 |   while(!isEmpty(aux){
      |        ~             ^
      |                      )
exercises.c:103:1: error: expected expression before ‘}’ token
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ef7ab5f
Fri 22 Mar 2024 07:42:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
exercises.c:100:22: error: expected ‘)’ before ‘{’ token
  100 |   while(!isEmpty(aux){
      |        ~             ^
      |                      )
exercises.c:104:1: error: expected expression before ‘}’ token
  104 | }
      | ^
exercises.c: At top level:
exercises.c:105:1: error: expected identifier or ‘(’ before ‘}’ token
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
570850d
Fri 22 Mar 2024 07:42:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
exercises.c:100:22: error: expected ‘)’ before ‘{’ token
  100 |   while(!isEmpty(aux){
      |        ~             ^
      |                      )
exercises.c:104:1: error: expected expression before ‘}’ token
  104 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fb49573
